feat：登录静态界面

--- a/client/src/assets/styles/global.less
+++ b/client/src/assets/styles/global.less
@@ -1,61 +1,66 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 input,
 textarea {
-  outline: none;
-  border: none;
+	outline: none;
+	border: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html,
 body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  font-size: 18px;
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	font-size: 18px;
 }
 
 ul,
 ol {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+	padding: 0;
+	margin: 0;
+	list-style: none;
 }
 
 img {
-  width: 100%;
-  height: auto;
+	width: 100%;
+	height: auto;
 }
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-  color: #999;
+	color: #999;
 }
 
 input::-moz-placeholder,
 textarea::-moz-placeholder {
-  color: #999;
+	color: #999;
 }
 
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
-  color: #999;
+	color: #999;
 }
 
 button {
-  border: none;
-  outline: none;
+	border: none;
+	outline: none;
 }
 
 body {
-  color: white;
-  font-family: "Josefin Sans", sans-serif;
+	color: white;
+	font-family: 'Josefin Sans', sans-serif;
 }
+
+@primaryColor: #a971e5;
+@geekblue-9: #061178;
+@magenta-9: #780650;
+@purple-3: #d3adf7;
