--- a/client/src/assets/styles/global.less
+++ b/client/src/assets/styles/global.less
@@ -38,16 +38,19 @@ img {
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
 	color: #999;
+	background: transparent;
 }
 
 input::-moz-placeholder,
 textarea::-moz-placeholder {
 	color: #999;
+	background: transparent;
 }
 
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
 	color: #999;
+	background: transparent;
 }
 
 button {
@@ -59,8 +62,3 @@ body {
 	color: white;
 	font-family: 'Josefin Sans', sans-serif;
 }
-
-@primaryColor: #a971e5;
-@geekblue-9: #061178;
-@magenta-9: #780650;
-@purple-3: #d3adf7;
