--- a/client/src/pages/login/index.module.less
+++ b/client/src/pages/login/index.module.less
@@ -1,3 +1,4 @@
+@import '@/assets/styles/variables.less';
 .bgContainer {
 	width: 100vw;
 	height: 100vh;
@@ -12,7 +13,7 @@
 		flex-direction: column;
 		gap: 2rem;
 		padding: 3rem 5rem;
-		background-color: rgba(255, 255, 255, 0.2);
+		background-color: @bg-filter-color;
 		border-radius: 2rem;
 		.title {
 			display: flex;
@@ -23,6 +24,12 @@
 				width: 3rem;
 				height: 3rem;
 			}
+		}
+		form {
+			width: 100%;
+		}
+		.loginBtn {
+			width: 50%;
 		}
 	}
 }
