style：login页面样式调整

--- a/client/src/assets/styles/variables.less
+++ b/client/src/assets/styles/variables.less
@@ -1,10 +1,10 @@
 @primary-color: #fff;
+@placeholder-color: #aaa;
 @primary-antd-color: #f759ab; // antd组件的主题色
 @geekblue-9: #061178;
 @magenta-9: #780650;
 @geekblue-5: #597ef7;
-
-// rgba
+@magenta-3: #ffadd2;
 @bg-filter-color: rgba(255, 255, 255, 0.2);
 
 // 字体颜色
