--- a/client/src/pages/login/index.module.less
+++ b/client/src/pages/login/index.module.less
@@ -23,6 +23,7 @@
       align-items: center;
       justify-content: center;
       gap: 1rem;
+      color: white;
       img {
         width: 3rem;
         height: 3rem;
@@ -41,11 +42,15 @@
             display: flex;
             justify-content: center;
           }
+          .ant-input {
+            color: white;
+          }
         }
       }
       .toRegister {
         display: flex;
         justify-content: flex-end;
+        color: white;
         .registerTitle {
           color: @primary-antd-color;
           cursor: pointer;
@@ -59,6 +64,9 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        span {
+          color: white;
+        }
         .rightTool {
           cursor: pointer;
           color: @primary-antd-color;
