--- a/client/src/assets/styles/global.less
+++ b/client/src/assets/styles/global.less
@@ -53,6 +53,16 @@ textarea:-ms-input-placeholder {
   background: transparent;
 }
 
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-text-fill-color: white !important;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  background-color: transparent;
+  background-image: none;
+  transition: background-color 50000s ease-in-out 0s;
+}
+
 button {
   border: none;
   outline: none;
