--- a/client/src/components/bgContainer/index.module.less
+++ b/client/src/components/bgContainer/index.module.less
@@ -1,6 +1,7 @@
 .bgContainer {
   width: 100vw;
   height: 100vh;
+  min-width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
