--- a/client/src/assets/styles/variables.less
+++ b/client/src/assets/styles/variables.less
@@ -4,6 +4,7 @@
 @geekblue-9: #061178;
 @magenta-9: #780650;
 @geekblue-5: #597ef7;
+@blue-6: #1677ff;
 @magenta-3: #ffadd2;
 @bg-filter-color: rgba(255, 255, 255, 0.2);
 
