--- a/client/src/pages/container/index.module.less
+++ b/client/src/pages/container/index.module.less
@@ -13,24 +13,52 @@
     flex: 1;
     display: flex;
     .menu {
-      width: 5%;
-      min-width: 3rem;
-      background-color: white;
+      width: 3rem;
+      border-right: 1px solid white;
+      ul {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        li {
+          width: 2rem;
+          height: 2rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-top: 1rem;
+        }
+        li:hover,
+        .active {
+          background-color: @primary-antd-color;
+          border-radius: 30%;
+          transition: background-color 1s ease;
+        }
+        li:last-child {
+          position: absolute;
+          bottom: 0;
+        }
+        li svg {
+          font-size: 1rem;
+          color: white;
+        }
+      }
     }
     .left {
-      width: 22%;
-      background-color: antiquewhite;
+      width: 25%;
     }
     .center {
       width: 50%;
       background-color: aqua;
     }
     .right {
-      width: 23%;
+      width: 25%;
       background-color: aquamarine;
     }
   }
 }
+
 @media (max-width: 800px) {
   .container {
     .main {
