feat：封装布局容器以及子路由

--- a/client/src/pages/container/index.module.less
+++ b/client/src/pages/container/index.module.less
@@ -45,32 +45,9 @@
         }
       }
     }
-    .left {
-      width: 25%;
-    }
-    .center {
-      width: 50%;
-      background-color: aqua;
-    }
-    .right {
-      width: 25%;
-      background-color: aquamarine;
-    }
-  }
-}
-
-@media (max-width: 800px) {
-  .container {
-    .main {
-      .left {
-        width: 32%;
-      }
-      .center {
-        width: 63%;
-      }
-      .right {
-        display: none;
-      }
+    .content {
+      width: 100%;
+      display: flex;
     }
   }
 }
