style：左侧列表栏

--- a/client/src/components/bgContainer/index.module.less
+++ b/client/src/components/bgContainer/index.module.less
@@ -1,12 +1,13 @@
 .bgContainer {
   width: 100vw;
   height: 100vh;
-  min-width: 500px;
+  min-width: 70rem;
+  min-height: 40rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1rem;
   position: relative;
-  background: linear-gradient(to right top, #10239e, #391085, #9e1068);
+  background-image: linear-gradient(to right top, #10239e, #391085, #9e1068);
 }
