--- a/client/src/assets/styles/variables.less
+++ b/client/src/assets/styles/variables.less
@@ -7,6 +7,7 @@
 @blue-6: #1677ff;
 @magenta-3: #ffadd2;
 @bg-filter-color: rgba(255, 255, 255, 0.2);
+@bg-container-color: rgba(0, 0, 0, 0.5);
 
 // 字体颜色
 @font-color: #000;
