--- a/client/src/pages/container/components/menu/index.module.less
+++ b/client/src/pages/container/components/menu/index.module.less
@@ -1,6 +1,7 @@
 @import '@/assets/styles/variables.less';
 .menu {
   width: 3rem;
+  height: 30rem;
   border-right: 1px solid white;
   ul {
     width: 100%;
