--- a/client/src/pages/container/components/chat/index.module.less
+++ b/client/src/pages/container/components/chat/index.module.less
@@ -4,6 +4,7 @@
   height: 30rem;
   display: flex;
   flex-direction: column;
+  border-right: 1px solid white;
   .search {
     width: 100%;
     height: 3rem;
@@ -74,7 +75,7 @@
 }
 .center {
   width: 50%;
-  background-color: aqua;
+  // background-color: aqua;
 }
 .right {
   width: 25%;
